--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,7 +52,7 @@ workflow:
 .test_unit:
   tags:
     - group:eks-dataplane
-  image: ubuntu:latest
+  image: public.ecr.aws/ubuntu/ubuntu:latest
   before_script:
     - apt-get update && apt-get install git -q -y
     - *script_git_config
@@ -75,7 +75,7 @@ workflow:
 .test_verify:
   tags:
     - group:eks-dataplane
-  image: ubuntu:latest
+  image: public.ecr.aws/ubuntu/ubuntu:latest
   before_script:
     - apt-get update && apt-get install git -q -y
     - *script_git_config
@@ -98,7 +98,7 @@ workflow:
 .test_integration:
   tags:
     - group:eks-dataplane
-  image: ubuntu:latest
+  image: public.ecr.aws/ubuntu/ubuntu:latest
   before_script:
     - apt-get update && apt-get install git -q -y
     - *script_git_config
@@ -125,7 +125,7 @@ workflow:
 .kubernetes_versions: &kubernetes_matrix
   parallel:
     matrix:
-    - MINOR_VERSION: ["1.20", "1.21", "1.22", "1.23", "1.24", "1.25", "1.26", "1.27"]
+    - MINOR_VERSION: ["1.21", "1.22", "1.23", "1.24", "1.25", "1.26", "1.27"]
 
 build_update_patches_base_version:
   extends:
